# JUCE4Pi

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Apps/: CMakeLists.txt
Apps/ADC21CPanel/: CMakeLists.txt
Apps/ADC21CPanel/Source/: CommonHeader.h  HighLowFilter.h  LushDelayEngine.h  LushDelayLine.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  Params.h  RED.c  StereoDelayLine.h  rotary_encoder.cpp  rotary_encoder.hpp
CMake/: clang-cxx-dev-tools.cmake  toolchain-rasppi.cmake
Delays/: CMakeLists.txt
Delays/LushDelayPlus/: CMakeLists.txt  LushDelayPlus.jucer  README.md
Delays/LushDelayPlus/Fonts/Dancing_Script/: README.txt
Delays/LushDelayPlus/Graphics/: Lush Delay UI.afdesign
Delays/LushDelayPlus/Source/: BinaryHelper.h  ControlPair.h  ControlPanel.h  DelayVisualizer.h  DryWetControl.h  EqPair.h  HeaderPanel.h  HighLowFilter.h  KnobPair.h  LushDelayEngine.h  LushDelayLine.h  LushLookAndFeel.h  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SliderPair.h  StereoDelayLine.h
Docs/: RPi-setup.txt  hifiberry-dac-adc-pro.txt  increase-swap-size.txt  third-party-code-sources.txt
HeadlessApps/: CMakeLists.txt
HeadlessApps/ModMatePlusApp/: CMakeLists.txt
HeadlessApps/ModMatePlusApp/Source/: BinaryHelper.h  Headless.h  Main.cpp  MainContentComponent.h  RED.h
Modules/: CMakeLists.txt
Modules/ff_meters/LevelMeter/: LevelMeterSource.h
Modules/ff_meters/LookAndFeel/: LevelMeterLookAndFeelMethods.h
Modules/hack_audio_gui/: hack_audio_gui.cpp  hack_audio_gui.h
Modules/hack_audio_gui/components/: hack_audio_Button.cpp
Modules/hack_audio_gui_full/: hack_audio_gui.cpp
Modules/hack_audio_gui_full/components/: hack_audio_Button.cpp  hack_audio_Button.h  hack_audio_Graph.cpp  hack_audio_Graph.h  hack_audio_Label.cpp  hack_audio_Label.h  hack_audio_Meter.cpp  hack_audio_Meter.h  hack_audio_Selector.cpp  hack_audio_Selector.h  hack_audio_Slider.cpp  hack_audio_Slider.h
Modules/hack_audio_gui_full/diagrams/: hack_audio_Diagrams.h
Modules/hack_audio_gui_full/diagrams/filters/: hack_audio_CombFilter.h  hack_audio_LPCombFilter.h
Modules/hack_audio_gui_full/layout/: hack_audio_Diagram.cpp  hack_audio_Diagram.h  hack_audio_FlexBox.cpp  hack_audio_FlexBox.h  hack_audio_Viewport.cpp  hack_audio_Viewport.h
Modules/hack_audio_gui_full/utils/: hack_audio_FontData.cpp  hack_audio_NavigationButton.h  hack_audio_TextFormatting.h
Modules/stm_dsp/: stm_dsp.h
Modules/stm_dsp/analyzers/: stm_LevelAnalyzer.h
Modules/stm_dsp/processors/: stm_AutoGain.h  stm_DCFilter.h  stm_DelaySimple.h  stm_DryWetMix.h  stm_FrequencyModulator.h  stm_MatchedBypass.h  stm_Panner.h  stm_Saturation.h
Modules/stm_dsp/utilities/: stm_Measuring.h  stm_Mixer.h  stm_Notes.h  stm_Oscillator.h  stm_ParameterAttachment.h  stm_Primes.h  stm_Rampers.h  stm_RecircBuffer.h  stm_RingBuffer.h  stm_RollingAverage.h
Modules/stm_gui/: stm_gui.h
Modules/stm_gui/analyzers/: stm_LevelMeter.h
Modules/stm_gui/controls/: stm_Slider2Axis.h
Modules/stm_gui/displays/: stm_DebugDisplay.h  stm_DisabledVeil.h  stm_RecircBufferDisplay.h  template.h
Modules/stm_gui/icons/: stm_FilterIcon.h
Modules/stm_gui/lookandfeel/: stm_LookAndFeel.h
OpenGLPlugins/: CMakeLists.txt
OpenGLPlugins/MIDIVisualizerPlus/: CMakeLists.txt
OpenGLPlugins/MIDIVisualizerPlus/Source/: Attributes.h  BinaryResourceHelper.h  GLUtils.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShaderPreset.h  Shape.h  Textures.h  Uniforms.h  Vertex.h  WavefrontObjParser.h
Plugins/: CMakeLists.txt
Plugins/ModMatePlus/: CMakeLists.txt
Plugins/ModMatePlus/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  UnidirectionalSlider.cpp  UnidirectionalSlider.h
Reverbs/: CMakeLists.txt
Reverbs/SimpleReverbPlus/: CMakeLists.txt
Reverbs/SimpleReverbPlus/Source/: CMakeLists.txt
